# eejx

./: .gitignore  README.md  build_backend.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
ee_mvp/: __init__.py  models.py  nec.py  run.py  scc.py  taps.py  vd.py  version.py
ee_mvp/tables/: conductor_od_stub.csv  egc_table_stub.csv  emt_area_stub.csv  nec_310_16_stub.csv
eejx/: __init__.py  cli.py
eejx/_build/: __init__.py  backend.py
eejx/analysis/: load_calc.py  short_circuit.py  voltage_drop.py
eejx/export/: panel.py
eejx/schema/: models.py  project_graph_schema.json
eejx/validate/: __init__.py  core.py  issues.py
examples/: demo_notebook.ipynb  demo_project.json
pandas/: __init__.py
pydantic/: __init__.py
tests/: test_build_backend.py  test_monotonicity.py  test_readme_badge.py  test_sample_graph.py  test_sanity.py
