[build-system]
requires = []
build-backend = "eejx._build.backend"
backend-path = ["."]

[project]
name = "eejx"
version = "0.1.0"
description = "Deterministic EE toolchain with LLM extraction"
authors = [{name = "EEJX"}]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest", "hypothesis"]

[project.scripts]
eejx = "eejx.cli:main"
