[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ee-mvp"
version = "0.1.0"
description = "Bootstrap NEC-friendly electrical engineering calculations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "EE MVP"}]

dependencies = [
    "pandas>=1.5",
    "pydantic>=1.10",
]

[tool.setuptools.packages.find]
include = ["ee_mvp", "ee_mvp.*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ee_mvp" = ["tables/*.csv"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]
